# concord

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  design-considations.md  todo.txt
.github/workflows/: test.yaml
src/: client.rs  cluster.rs  diagnostics.rs  harness.rs  integration_test.rs  main.rs  raft.proto  raft.rs  raft_grpc.rs  raft_proto.proto
src/keyvalue/: http.rs  keyvalue_proto.proto  mod.rs  persistence.rs  service.rs  store.rs
src/raft/: client.rs  cluster.rs  consensus.rs  diagnostics.rs  error.rs  failure_injection.rs  log.rs  mod.rs  network.rs  persistence.rs  raft_proto.proto  state_machine.rs  store.rs  testing.rs
src/raft/proto/: common.proto  persistence.proto  service.proto
src/testing/: http_server.rs  mod.rs  rpc_server.rs  server.rs
tools/: install_proto.sh
