[package]
name = "concord"
version = "0.1.0"
authors = ["Dino Wernli <dinowernli@gmail.com>"]
edition = "2024"

[dependencies]
async-std = {version = "1.13"}
async-trait = "0.1.80"
axum = "0.8"
axum_tonic = "0.3"
bytes = "1.6"
chrono = "0.4"
futures = "0.3"
im = "15"
pin-project = "1.1"
prost = "0.13.5"
querystring = "1.1"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1.0.219", features = ["derive"] }
structopt = "0.3"
thiserror = "2"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.12.3"
tower = "0.5.2"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.1", features = ["env-filter"]}

[build-dependencies]
tonic-build = "0.12.3"
